more on sip2 authentication

--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -25,7 +25,9 @@
 
 
 <script type="text/javascript" src="/js/jquery-1.11.1.js"></script>  <!-- change to jquer-1.11.1.min.js before going to production -->
- <script type="text/javascript" src="/plugins/jquery-ui-1.11.1/jquery-ui.js"></script>
+<script type="text/javascript" src="/js/jquery.cookie.js"></script>
+
+<script type="text/javascript" src="/plugins/jquery-ui-1.11.1/jquery-ui.js"></script>
 
 <script type="text/javascript" src="/js/menu-counters-1.0.js"></script>
 
