inner left style

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -738,6 +738,12 @@ div.login input {
 #pager {
 }
 
+.innerLeft {
+	width 45%;
+	float: left;
+	display: inline;
+}
+
 /*------------------------------------------------------*/
 /* from Ohio Web Library */
 #progress_empty {
