--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -82,7 +82,7 @@ $('document').ready(function(){
   </div>
 
   <div class="innerLeft">
-	<h3>(3. Canada Post Shipping Tool)</h3>
+	<h3>3. Canada Post Shipping Tool</h3>
 	<div id="shippingtool">
 	  <p>Clicking on this link will open the <a href="http://www.clatoolbox.ca/EOE_SCE_Prod/forms/" target="_blank" style="text-decoration : underline;">Canada Post Shipping Tool</a> in a new tab or window.</p>
 	</div>
