updates to shipping and innerLEFT

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -742,6 +742,8 @@ div.login input {
 	width 45%;
 	float: left;
 	display: inline;
+	margin: .5em;
+	
 }
 
 /*------------------------------------------------------*/
