--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -87,9 +87,11 @@ $('document').ready(function(){
 	  <p>Clicking on this link will open the <a href="http://www.clatoolbox.ca/EOE_SCE_Prod/forms/" target="_blank" style="text-decoration : underline;">Canada Post Shipping Tool</a> in a new tab or window.</p>
 	</div>
   </div>
-
-      <br/>
+  
+  <div class="innerLeft"
       <h3>2. Items to ship</h3>
+  </div>
+
     <div id="mylistDiv"></div>
 
 <div id="instructions" class="tone-box">
