--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -81,14 +81,14 @@ $('document').ready(function(){
   </div>
   </div>
 
-  <div class="innerLeft">
+  <div class="innerLeft tone-box">
 	<h3>3. Canada Post Shipping Tool</h3>
 	<div id="shippingtool">
 	  <p>Clicking on this link will open the <a href="http://www.clatoolbox.ca/EOE_SCE_Prod/forms/" target="_blank" style="text-decoration : underline;">Canada Post Shipping Tool</a> in a new tab or window.</p>
 	</div>
   </div>
-  
-  <div class="innerLeft"
+
+  <div class="innerLeft tone-box"
       <h3>2. Items to ship</h3>
   </div>
 
