home tab highlight, and removing some unused functions from pull list template

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -209,7 +209,7 @@ $('document').ready(function(){
 <!--***************ARIA MARKER 'NAVIGATION'***************-->
 <nav role="navigation" id="lib-nav-primary">
   <ul class="inline-items">
-    <li><a id="" href="/cgi-bin/info.cgi?rm=welcome">Home</a></li>
+    <li><a id="menu_home" href="/cgi-bin/info.cgi?rm=welcome">Home</a></li>
     <li><a id="menu_borrow" href="/cgi-bin/lightning.cgi?rm=lightning_search_form">Borrowing</a></li>
     <li><a id="menu_lend" href="/cgi-bin/lightning.cgi?rm=pull_list">Lending</a></li>
     <li><a id="menu_current" href="/cgi-bin/lightning.cgi?rm=current">Current</a></li>
