--- a/templates/search/pull_list.tmpl
+++ b/templates/search/pull_list.tmpl
@@ -2,36 +2,9 @@
 <TMPL_INCLUDE NAME="submenu_lend.tmpl">
 
 
-<script type="text/javascript">
-  function toggleLayer( whichLayer )
-  {
-    var elem, vis;
-    if( document.getElementById ) // this is the way the standards work
-      elem = document.getElementById( whichLayer );
-    else if( document.all ) // this is the way old msie versions work
-      elem = document.all[whichLayer];
-    else if( document.layers ) // this is the way nn4 works
-      elem = document.layers[whichLayer];
-
-    vis = elem.style;
-    // if the style.display value is blank we try to figure it out here
-    if(vis.display==''&&elem.offsetWidth!=undefined&&elem.offsetHeight!=undefined)
-      vis.display = (elem.offsetWidth!=0&&elem.offsetHeight!=0)?'block':'none';
-    vis.display = (vis.display==''||vis.display=='block')?'none':'block';
-  }
-</script>
-
-<script language="JavaScript">
+<script language="javascript">
 
 $('document').ready(function() {
-
-  function set_primary_tab(tab_id) {
-    document.getElementById(tab_id).className='current_tab';
-  }
-
-  function set_secondary_tab(tab_id) {
-    document.getElementById(tab_id).className='current_tab';
-  }
 
   set_secondary_tab("menu_lend_pull");
 
