renamed no-response to pending

--- a/templates/submenu_borrow.tmpl
+++ b/templates/submenu_borrow.tmpl
@@ -15,8 +15,8 @@
       </a>
     </li>
 
-    <li id="menu_borrow_noresponse">
-      <a href=/cgi-bin/lightning.cgi?rm=no_response>
+    <li id="menu_borrow_pending">
+      <a href=/cgi-bin/lightning.cgi?rm=pending>
       Pending
       </a>
     </li>
