added distinct colours for disabled state of table action buttons

--- a/htdocs/css/themes-library-allison.css
+++ b/htdocs/css/themes-library-allison.css
@@ -719,19 +719,23 @@ and (max-width : 65em)
 
 
 /* action button styles for data table buttons */
-input[type="button"].action-button {
+input[type="button"].action-button, button.action-button {
     background-color: #7a7669;
     color: #fff;
 }
-input[type="button"]:hover.action-button {
+input[type="button"]:hover.action-button, button:hover.action-button {
     background-color: #a9a28b;
     color: #fff;
 }
-input[type="button"].action-button-highlighted {
+input[type="button"]:disabled.action-button, button:disabled.action-button {
+    background-color: #69614a;
+    color: #fff;
+}
+input[type="button"].action-button-highlighted, button.action-button-highlighted {
     background-color: #7a5f04;
     color: #fff;
 }
-input[type="button"]:hover.action-button-highlighted {
+input[type="button"]:hover.action-button-highlighted, button:hover.action-button-highlighted {
     background-color: #BA9D3C;
     color: #fff;
 }
