--- a/templates/search/request_placed.tmpl
+++ b/templates/search/request_placed.tmpl
@@ -55,21 +55,21 @@ $('document').ready(function(){
     <p>The following requests have been added to these lender's pending lists:</p>
     <table>
       <tr>
-	<td>gid</td>
-	<td> </td>
-	<td>cid</td>
-	<td> </td>
-	<td>request_id</td>
+<!--	<td>gid</td> -->
+<!--	<td> </td> -->
+<!--	<td>cid</td> -->
+<!--	<td> </td> -->
+<!--	<td>request_id</td> -->
 	<td>symbol</td>
 	<td>library</td>
 	<td>call_number</td>
       </tr>
     <TMPL_LOOP name="trying">
       <tr>
-	<td><TMPL_VAR name="group_id"></td>
+<!--	<td><TMPL_VAR name="group_id"></td>
 	<td> - </td>
 	<td><TMPL_VAR name="chain_id"></td>
-	<td> - </td>
+	<td> - </td> -->
 	<td><TMPL_VAR name="request_id"></td>
 	<td><TMPL_VAR name="symbol"></td>
 	<td><TMPL_VAR name="library"></td>
