--- a/htdocs/css/fILL-library-accessible.1.0.css
+++ b/htdocs/css/fILL-library-accessible.1.0.css
@@ -30,6 +30,10 @@
   font-size: 1.4em;
 }
 
+#lib-nav-primary #menu_borrow, #lib-nav-primary #menu_lend {
+  font-weight: bold;
+}
+
 #lib-nav-primary ul
 {
   margin-top: .5em;
