--- a/templates/search/renewals.tmpl
+++ b/templates/search/renewals.tmpl
@@ -71,7 +71,7 @@ $('document').ready(function(){
       <div id="mylistDiv"></div>
     </div>
 
-    <div class="tone-box">
+    <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
     <ol>
       <li>These are items that your patrons currently have out.</li>
