--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -69,7 +69,7 @@ $('document').ready(function(){
 
     <div id="myDiv"><br />
     <div class="innerLeft tone-box">
-	   <h3>1. Set the due date</h3>
+	   <h3>Set the due date</h3>
 	<div id="defaultDueDate">
 	  <form id="set_default_due_date" onsubmit="set_default_due_date(this); this.submit_default_due_date.value='Change due date'; return false;">
 	    <p>
@@ -82,14 +82,10 @@ $('document').ready(function(){
   </div>
 
   <div class="innerLeft tone-box">
-	<h3>3. Canada Post Shipping Tool</h3>
+	<h3>Canada Post Shipping Tool</h3>
 	<div id="shippingtool">
 	  <p>Clicking on this link will open the <a href="http://www.clatoolbox.ca/EOE_SCE_Prod/forms/" target="_blank" style="text-decoration : underline;">Canada Post Shipping Tool</a> in a new tab or window.</p>
 	</div>
-  </div>
-
-  <div class="innerLeft tone-box"
-      <h3>2. Items to ship</h3>
   </div>
 
     <div id="mylistDiv"></div>
