bugfix on renewal-answer, and a whole whack of text clarifications from Allison and Erika

--- a/templates/info/contacts.tmpl
+++ b/templates/info/contacts.tmpl
@@ -32,13 +32,12 @@ $('document').ready(function(){
 <div id="center" role="main">
 
     <div id="myDiv">
-      <h3>Library contact information</h3>
       <div>
 	<div class="dataTable_wrapper">
 	  <table id="datatable_contacts" width="100%">
 	    <thead>
 	      <tr>
-		<th>library</th><th>name</th><th>phone</th><th>email_address</th><th>mailing_address</th>
+		<th>library</th><th>Symbol</th><th>Phone</th><th>Email address</th><th>Mailing address</th>
 	      </tr>
 	    </thead>
 	    <tbody>
