--- a/templates/search/checkins.tmpl
+++ b/templates/search/checkins.tmpl
@@ -69,10 +69,10 @@ $('document').ready(function(){
 
   <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-    <ol>
-      <li>This is a list of loans you have made to other libraries, where the borrowing library has returned the item.</li>
-      <li>When the item arrives in the mail, check it in here and in your ILS.</li>
-    </ol>
+    <ul>
+      <li>When an item is returned to your library, first check it in to your ILS, then click "Checked in to ILS."</li>
+      <li>As items are checked in here, they are removed from this list and moved to history.</li>
+    </ul>
   </div>
 
 </div>
