--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -178,9 +178,9 @@ $('document').ready(function(){
 
     <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
-    <ol>
-      <li>Current interlibrary loans: borrowing and lending</li>
-    </ol>
+    <ul>
+      <li>If there is a problem with an item on this list, click the "Override" button (green plus sign in the right-most column) to view options.</li>
+    </ul>
     </div>
     
 </div>
