--- a/templates/search/holds.tmpl
+++ b/templates/search/holds.tmpl
@@ -77,7 +77,7 @@ $('document').ready(function(){
     <h2>Instructions</h2>
     <ol>
       <li>If a lending library placed a hold for you, that request will be shown here.</li>
-      <li>When the lender fills the hold (i.e. ships the title to you), it will be removed from this list and added to your 'Receiving' list.</li>
+      <li>When the lender fills the hold (i.e. ships the title to you), it will be removed from this list and added to your 'Receiving' tab.</li>
     </ol>
 </div>
 
