--- a/templates/search/new_patron_requests.tmpl
+++ b/templates/search/new_patron_requests.tmpl
@@ -80,7 +80,7 @@ $('document').ready(function(){
     
     <p>If you do not agree to ILL an item, make sure to tell your patron!</p>
     
-    <p><strong>For privacy reasons, fILL does not keep these patron requests after you've dealt with them.</strong></p>
+    <p><strong>For privacy reasons, fILL does not keep a record of patron requests.</strong></p>
   </div>
 
 </div>
