--- a/templates/search/overdue.tmpl
+++ b/templates/search/overdue.tmpl
@@ -71,8 +71,8 @@ $('document').ready(function(){
 <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
     <ol>
-      <li>You will need to contact these patrons.</li>
-      <li>Items will be removed from the overdue list when you mark them as 'Returned' on the Returns screen.</li>
+      <li>These items are now overdue, and you will need to contact these patrons.</li>
+      <li>To return the items, got to the Returns tab and click 'Returned'.</li>
     </ol>
 </div>
 
