--- a/templates/search/pull_list.tmpl
+++ b/templates/search/pull_list.tmpl
@@ -49,7 +49,7 @@ $('document').ready(function() {
       <thead>
 	<tr><th>Call Number</th><th>Author</th><th>Title</th><th>Date/Time requested</th><th>Requested by</th><th>Requestor note</th><th>Your barcode for the requesting library</th></tr>
       </thead>
-      <tfoot><tr><td colspan="8">You can print this and take it to the stacks.</td></tr></tfoot>
+      <tfoot><tr><td colspan="8">You can print this list to use while in the stacks.</td></tr></tfoot>
       <tbody>
       <TMPL_LOOP name="pulls">
 	<tr>
