--- a/templates/search/receiving.tmpl
+++ b/templates/search/receiving.tmpl
@@ -82,8 +82,7 @@ $('document').ready(function(){
     </div>
 
     <div id="myDiv"><br />
-      <h3>Printing of Date-Due slips</h3>
-      <p>Select your printing option:</p>
+      <p>Select your due-date slip printing option:</p>
       <div id="slipPrinting"></div>
       <div id="multiCount"></div>
       <br/>
@@ -96,8 +95,8 @@ $('document').ready(function(){
 <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
     <ol>
-      <li>As books arrive from lending libraries to fill your ILL requests, click the 'Received' button for that book.</li>
-      <li>You will have the option of printing a date-due slip.</li>
+      <li>As items arrive, receive them by clicking the 'Received' button. Once items are received, they will be removed from this list and you will have the option of printing a due date slip.</li>
+      <li>You can see the status of all of your active ILLs in the 'Current' tab.</li>
     </ol>
 </div>
 
