--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -112,6 +112,7 @@ $('document').ready(function(){
         <li>For each of the requests that you are filling, click the "Will-supply" button.</li>
         <li>For each remaining request - those that will be unfilled - click the "Unfilled" button and select a reason.</li>
         <li>Hover over a library's symbol to see the full name of the library.</li>
+	<li>As requests are handled, they are removed from this list.  You can see the status of all of your active ILLs in the 'Current' tab.</li>
       </ol>
   </div>
 
