--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -92,10 +92,13 @@ $('document').ready(function(){
 
 <div id="instructions" class="tone-box">
     <h3>Instructions</h3>
-    <p>If your due date is the same for all (or most) requests you are filling, enter that as the "default due date".</p>
-    <p>For each of the requests that you are filling, click the "Sent" button.</p>
-    <p>The "Oops!" button will return the request to the Respond list.</p>
-    <p>Hover over a library's symbol to see the full name of the library.</p>
+    <ul>
+      <li>If you want to change the due date of items, set the due date and click 'Apply due date.'  This will change the due dates for all items in the table.</li>
+      <li>For each of the requests that you are filling, click the "Sent" button.</li>
+      <li>The "Oops!" button will return the request to the Respond list.</li>
+      <li>Hover over a library's symbol to see the full name of the library.</li>
+      <li>As requests are handled, they are removed from this list.  You can see the status of all of your active ILLs in the 'Current' tab.</li>
+    </ul>
 </div>
 
 </div>
