--- a/templates/info/view_report.tmpl
+++ b/templates/info/view_report.tmpl
@@ -81,20 +81,20 @@ $('document').ready(function(){
 
     <h3>Borrowing</h3>
     <table id="fill-table" class="table-width-lib">
-      <tr><td style="border:1px solid black;">Books requested</td><td style="border:1px solid black;">Number of titles you've requested.</td></tr>
-      <tr><td style="border:1px solid black;">Actual requests</td><td style="border:1px solid black;">including retrying unfilleds, etc</td></tr>
-      <tr><td style="border:1px solid black;">Unfilled responses</td><td style="border:1px solid black;">Number of times libraries could not fill (actual) requests</td></tr>
-      <tr><td style="border:1px solid black;">Lender shipped</td><td style="border:1px solid black;">books physically received from lenders.</td></tr>
-      <tr><td style="border:1px solid black;">We cancelled</td><td style="border:1px solid black;">Requests you cancelled.</td></tr>
+      <tr><td style="border:1px solid black;">Items requested</td><td style="border:1px solid black;">Number of items you've requested.</td></tr>
+      <tr><td style="border:1px solid black;">Actual requests</td><td style="border:1px solid black;">Number of requests made to lenders, including unfilled requests</td></tr>
+      <tr><td style="border:1px solid black;">Unfilled requests</td><td style="border:1px solid black;">Number of unfilled requests</td></tr>
+      <tr><td style="border:1px solid black;">Lender shipped</td><td style="border:1px solid black;">Number of items received from lenders.</td></tr>
+      <tr><td style="border:1px solid black;">We cancelled</td><td style="border:1px solid black;">Number of requests you cancelled.</td></tr>
     </table>
 
     <h3>Lending</h3>
     <table id="fill-table" class="table-width-lib">
-      <tr><td style="border:1px solid black;">Requests to lend</td><td style="border:1px solid black;">Number of requests other libraries have made to you</td></tr>
-      <tr><td style="border:1px solid black;">Could not fill</td><td style="border:1px solid black;">Number of times you responded 'unfilled'</td></tr>
-      <tr><td style="border:1px solid black;">Shipped</td><td style="border:1px solid black;">books you sent out.</td></tr>
-      <tr><td style="border:1px solid black;">Forward to branch</td><td style="border:1px solid black;">Number of requests you've forwarded to one of your branches</td></tr>
-      <tr><td style="border:1px solid black;">Borrower cancelled</td><td style="border:1px solid black;">Number of requests that the borrower cancelled before you could respond.</td></tr>
+      <tr><td style="border:1px solid black;">Requests to lend</td><td style="border:1px solid black;">Number of requests you received from other libraries</td></tr>
+      <tr><td style="border:1px solid black;">Could not fill</td><td style="border:1px solid black;">Number of requests to which you responded 'unfilled'</td></tr>
+      <tr><td style="border:1px solid black;">Shipped</td><td style="border:1px solid black;">Number of items you sent out.</td></tr>
+      <tr><td style="border:1px solid black;">Forward to branch</td><td style="border:1px solid black;">Number of requests you forwarded to one of your branches</td></tr>
+      <tr><td style="border:1px solid black;">Borrower cancelled</td><td style="border:1px solid black;">Number of requests the borrower cancelled before you could respond.</td></tr>
     </table>
   </div>
 
