--- a/templates/myaccount/library-barcodes.tmpl
+++ b/templates/myaccount/library-barcodes.tmpl
@@ -94,20 +94,22 @@ $('document').ready(function(){
 </script>
 
 <div id="center" role="main">
-    <h2>Instructions</h2>
-    <ol>
-      <li>Click on the barcode column to enter the barcode from your ILS.</li>
-    </ol>
-
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
     </div>
 
     <div id="myDiv">
-    <h3>Library barcodes from your ILS</h3>
-        <div id="mylistDiv">
-        </div>
+      <div id="mylistDiv">
+      </div>
     </div>
+
+    <h2>Instructions</h2>
+    <ul>
+      <li>In your ILS, you should have other libraries (borrowers) set up as patrons.</li>
+      <li>You can enter the barcodes for those patron records here, by clicking on the "barcode" cell for that library.</li>
+      <li>These are the patron barcodes that will appear on your fILL pull list.</li>
+    </ul>
+
 </div>
 
 
