--- a/templates/patrons/patrons.tmpl
+++ b/templates/patrons/patrons.tmpl
@@ -53,21 +53,18 @@ $('document').ready(function(){
 
 	    $('td:eq(3),td:eq(4),td:eq(5),td:eq(8)', oTable.fnGetNodes()).editable( '/cgi-bin/update-patron.cgi', {
 	        "callback": function( sValue, y ) {
-	            //alert('2. sValue: '+sValue);
 	            var obj = jQuery.parseJSON( sValue );
-	            //alert('3. data: '+obj.data);
 		    var aPos = oTable.fnGetPosition( this );
-		    oTable.fnUpdate( obj.data, aPos[0], aPos[1] );
+		    oTable.fnUpdate( obj.data, aPos[0], aPos[2] );
 	        },
          	"submitdata": function ( value, settings ) {
-	            //alert('1. value: '+value+'\nsettings: '+settings+'\npid: '+this.parentNode.getAttribute('id')+'\ncolumn: '+oTable.fnGetPosition( this )[2]);
 	            return {
 		        "pid": this.parentNode.getAttribute('id'),
 		        "lid": <TMPL_VAR name="lid">,
 			"column": oTable.fnGetPosition( this )[2]
 		    };
         	},
-	        "height": "14px",
+	        "height": 24,
 	        "select": true
             });
 
@@ -84,7 +81,6 @@ $('document').ready(function(){
     </div>
 
     <div id="myDiv">
-      <h3>Patrons registered with fILL</h3>
       <div id="mylistDiv">
       </div>
     </div>
@@ -92,10 +88,12 @@ $('document').ready(function(){
   <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
     
-    <p>Update a user's <strong>email address</strong> by clicking on it and changing the text.</p>
-    <p>Update a user's <strong>enabled</strong> status by clicking on it entering '0' or '1' ('0' means they are not enabled).  Hit <strong>[ENTER]</strong> to complete the change.</p>
-    <p>Update a user's <strong>verified</strong> status by clicking on it entering '0' or '1' ('0' means they are not verified).  Hit <strong>[ENTER]</strong> to complete the change.</p>
-    <p>You won't see a user's current <strong>password</strong>, but you can change it by clicking on "Click to change password" for that user.</p>
+    <ul>
+      <li>Update a user's <strong>email address</strong> by clicking on it and changing the text.</li>
+      <li>Update a user's <strong>verified</strong> status by clicking on it entering '0' or '1' ('0' means they are not verified).  Hit <strong>[ENTER]</strong> to complete the change.</li>
+      <li>Update a user's <strong>enabled</strong> status by clicking on it entering '0' or '1' ('0' means they are not enabled).  Hit <strong>[ENTER]</strong> to complete the change.</li>
+      <li>You won't see a user's current <strong>password</strong>, but you can change it by clicking on "Click to change password" for that user.</li>
+    </ul>
   </div>
 
 </div>
