--- a/templates/search/history.tmpl
+++ b/templates/search/history.tmpl
@@ -83,7 +83,7 @@ $('document').ready(function(){
 <div id="center" role="main">
 
     <div id="instructions" class="tone-box">
-      <h3>View history - Fetch requests within this date range:</h3>
+      <h3>View completed ILL requests within this date range:</h3>
       <form>
 	<div style="float:left">
 	  <label for="startdate">Start date:</label>
@@ -94,7 +94,7 @@ $('document').ready(function(){
 	  <input id="enddate" type="text">
 	</div>
 	<div style="float:left">
-	  <input id="dateButton" type="button" class="library-style" value="Fetch requests...">
+	  <input id="dateButton" type="button" class="library-style" value="Fetch requests">
 	</div>
 	<div style="clear:both">
       </form>
