--- a/templates/search/renewals.tmpl
+++ b/templates/search/renewals.tmpl
@@ -75,7 +75,9 @@ $('document').ready(function(){
     <h2>Instructions</h2>
     <ol>
       <li>These are items that your patrons currently have out.</li>
-      <li>You can request a renewal.</li>
+      <li>A status of 'Renew' means that you have asked the lender for a renewal.</li>
+      <li>'Renew-Answer|Ok' means that the lender has allowed the renewal.</li>
+      <li>If the renewal was not accepted, the status will be 'Renew-Answer|No-renewal'</li>
     </ol>
     </div>
 
