--- a/templates/search/returns.tmpl
+++ b/templates/search/returns.tmpl
@@ -72,7 +72,8 @@ $('document').ready(function(){
     <h2>Instructions</h2>
     <ol>
       <li>If you try to check a book into your ILS, and your ILS doesn't have a record of that book, it's likely an ILL.</li>
-      <li>Find the book on this screen, click 'Return', and send it back to the lending library using the return slip that came with it.</li>
+      <li>Find the item on this screen, click 'Return', and send it back to the lending library using the return slip that came with it.</li>
+      <li>As you mark items 'returned', they are removed from this list.  You can see the status of all of your active ILLs in the 'Current' tab.</li>
     </ol>
   </div>
   
