remove theme and text-size buttons from login and logged-out pages

--- a/templates/logged_out.tmpl
+++ b/templates/logged_out.tmpl
@@ -6,6 +6,11 @@ $('document').ready(function(){
     $("#search").hide();
     $(".inline-items").children().hide();
     $("#fill-button").hide();  // hide the logout button, as it makes no sense here
+    $("#theme1").hide();
+    $("#theme2").hide();
+    $("#theme3").hide();
+    $("#incrFont").hide();
+    $("#decrFont").hide();
 
 });
 </script>
