--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -7,7 +7,11 @@ $('document').ready(function(){
     $(".inline-items").children().hide();
 //    $(".inline-items").children(":contains('home')").show();
     $("#fill-button").hide();  // hide the logout button, as it makes no sense here
-
+    $("#theme1").hide();
+    $("#theme2").hide();
+    $("#theme3").hide();
+    $("#incrFont").hide();
+    $("#decrFont").hide();
 });
 </script>
 
