column titles and minor cleanup to current and history tables

--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -165,8 +165,8 @@ $('document').ready(function(){
 <br />
     <div id="tabs">
       <ul>
-	<li><a href="#tabs-1">Current borrowing</a></li>
-	<li><a href="#tabs-2">Current lending</a></li>
+	<li><a href="#tabs-1">Borrowing</a></li>
+	<li><a href="#tabs-2">Lending</a></li>
 	<li><a href="#tabs-3">We could not lend</a></li>
       </ul>
 
