hide username and lid in header

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -180,9 +180,9 @@ $('document').ready(function(){
 <div id="header-right">
     <div id="logout-button"><a href="?authen_logout=1" type="button" role="button" id="fill-button" class="library-style">log out</a></div>
   <div id="patron-info">
-    <p><TMPL_VAR NAME="username"></p>
+    <p style="display:none"><TMPL_VAR NAME="username"></p>
     <p id="library_name"><TMPL_VAR NAME="library"></p>
-    <p id="lid"><TMPL_VAR NAME="lid"></p>
+    <p id="lid" style="display:none"><TMPL_VAR NAME="lid"></p>
     <input id="theme1" class="theme-chooser1" type="button" value="A" />
     <input id="theme2" class="theme-chooser2" type="button" value="A" />
     <input id="theme3" class="theme-chooser3" type="button" value="A" />
