--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -36,42 +36,22 @@ $('document').ready(function() {
 </div>
 
 <div id="main-right" class="tone-box" role="complimentary">
-	<h2>Updates</h2>
-	<hr>
-	<strong>24th September 2014</strong>
-	
-		<h3>Accidentally said "Will-Supply"?</h3>
-		<p>The Shipping screen now has an <strong>Oops! Return this to the Respond list</strong> button.</p>
-		<p>This will remove the item from the Shipping list and place it back in the Respond list, where you can then mark it as unfilled.</p>
-		<h3>Cancelling a hold</h3>
-		<p>Borrowers: if a lender has placed a hold for you, that item will show up in the "Borrowing..." | "Holds placed" screen.</p>
-		<p>You can cancel a request that has a hold placed by clicking the <strong>Cancel request</strong> button for it.</p>
-		<p>Lenders: if you have a hold placed in your ILS for a borrower and the borrower cancels the request, it still shows up in your "Lending..." | "On hold" screen.  Instead of the usual "Ready to ship" button (which moves the request to your Shipping screen), that request will now have a <strong>Cancelled by borrower</strong> button, which will close the request and move it to history.  You should then (in your ILS) cancel the hold / check the item back in.</p>
-		<p>The "Lending..." | "On hold" tab indicates if you have any borrower requests that have been cancelled, by adding a "/1" after the number of on-hold requests.  So, for example, if you have 5 requests that you have placed holds for, and borrowers have cancelled 2 of those, the tab will show "On hold 3/2" - three active and two cancelled requests.</p>
-		
-		<h3>Requests that have not (yet) been responded to</h3>
-		<p>There is a new tab under Borrowing: <strong>Pending</strong>.  This is a list of requests you have made that have not had a response yet.</p>
-		<p>This will make it easier for you to try the next lender or cancel the request.</p>
-		<p>For any individual request, fILL sorts the list of potential lenders (a.k.a. "sources") in net-borrower/net-lender order.  The Pending tab gives the first source 3 days to respond before giving you the option to try the next lender.</p>
-		
-		<hr>
-		<strong>15th August 2014</strong>
-		<h3>Holds</h3>
-		<p>fILL now supports holds handling, in the ILL-standard way!</p>
-		<p>The User's Guide has been updated with more-detailed information, but here are the highlights:</p>
-		
-		<h4>Borrowing: Asking for holds</h4>
-		
-		<p>When requesting an ILL, you can now ask the lender if they are willing to place a hold on the title for you.  If the lender places a hold (in their ILS) for you, that request will show up in the new <strong>Borrowing | Holds Placed</strong> tab. When they ship the item, the request automatically moves to your Borrowing | Receiving tab.</p>
-		
-		<hr>
-		<strong>11th July 2014</strong>
-		<h4>Lending: Placing holds</h4>
-		
-		<p>Your Lending | Respond list gives you a new option: "Hold placed".  If the borrower has asked if you are willing to place a hold for them, you can (at your discretion) place the hold in your ILS and then indicate here that you've done so.  Any holds you've placed will show up in the new <strong>Lending | On hold</strong> tab.  When the hold is ready, mark it as "Ready to ship" and it will move to your Lending | Shipping list.
-		</p>
-		<hr>
-		<strong>More...</strong>
-	</div>	
+  <h2>Updates</h2>
+  <hr>
+  <strong>18th November 2014</strong>
+  <h3>Refresh of the fILL Librarian interface</h3>
+  <p>We hope your patrons have discovered the fresh public face of fILL and that the redisign has made their experience and your ILL workflows easier.
+    We have collected a lot of constructive feedback around this development and your support has been extremely helpful in improving the system and
+    accessibility overall.</p>
+  <p>Over the last several months, the fILL development team at PLSB has received many great suggestions from the library community regarding how we can 
+    improve the fILL dashboard for interlibrary loan staff.  We are very excited to share that we've been able to incorporate many of your ideas and
+    they are available to everyone today!  There are some remaining suggestions that could not be immediately achieved which have been documented and
+    will be considered for future development.  We believe these improvements will make it easier for interlibrary loan staff to navigate the fILL
+    platform, view the information, perform various ILL related tasks and maximize efficiency by improving local workflows.</p>
+  <p>Your ongoing feedback is key to ensure our development resources are focused on the elements and features that are important across the library
+    community.  Once you've had a chance to review the changes, we'd really appreciate if you would let us know what you think and share your first
+    impressions with us be sending your feedback to <a href="mailto:pls@gov.mb.ca">pls@gov.mb.ca</a>.</p>
+  <p>- the fILL development team</p>
+</div>	
 
 <TMPL_INCLUDE NAME="footer.tmpl">
