--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -51,6 +51,13 @@ $('document').ready(function() {
   <p>Your ongoing feedback is key to ensure our development resources are focused on the elements and features that are important across the library
     community.  Once you've had a chance to review the changes, we'd really appreciate if you would let us know what you think and share your first
     impressions with us be sending your feedback to <a href="mailto:pls@gov.mb.ca">pls@gov.mb.ca</a>.</p>
+  <p>Among the many user interface updates you'll see:
+    <ul>
+      <li>Larger text</li>
+      <li>Enhanced menu notifications</li>
+      <li>Accessibility features</li>
+    </ul>
+  </p>
   <p>- the fILL development team</p>
 </div>	
 
