--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -758,7 +758,7 @@ div.login label, div.login input {
 	width: 45%;
 	float: left;
 	display: inline;
-	margin: .3em;
+	margin: 1em .5em;
 	padding: 1em;
 }
 
