--- a/templates/search/pull_list.tmpl
+++ b/templates/search/pull_list.tmpl
@@ -69,6 +69,13 @@ $('document').ready(function() {
     </table>
     
 
+  <div id="instructions" class="tone-box">
+    <h2>Instructions</h2>
+<p>You can print this list to use while in the stacks.</p>
+  </div>
+
+</div>
+
 </div>
 
 <TMPL_INCLUDE NAME="footer.tmpl">
