added table info to current

--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -181,6 +181,40 @@ $('document').ready(function(){
     <ul>
       <li>If there is a problem with an item on this list, click the "Override" button (green plus sign in the right-most column) to view options.</li>
     </ul>
+
+<table>
+<th><td>Action</td><td>Do this...</td></th>
+    <tr>
+        <td>Receive</td>
+        <td>if you have received the book from the lender, but the lender has not marked it as ‘Shipped’.<br>
+An override message will be added to the request, and it will be forced to ‘Shipped’.<br>
+The request will be added to your ‘Receiving’ list so that you can control slip printing.
+</td>
+    </tr>
+    <tr>
+        <td>Try next lender</td>
+        <td>if you have requested a book, but have not received a response from the (potential) lender in a timely fashion. This request will be cancelled, and the next lender will be tried.</td>
+    </tr>
+    <tr>
+        <td>No further sources</td>
+        <td>if there are no further sources for you to try.
+This request will be closed and moved to history.
+</td>
+    </tr>
+    <tr>
+        <td>Cancel</td>
+        <td>if the lender has not yet responded to your request. <br>
+An override message will be added to the request, and it will be closed and moved to history.
+</td>
+    </tr>
+    <tr>
+        <td>Close</td>
+        <td>if you have returned the book to the lender, but you get an Overdue notice because the lender has not marked it as ‘Checked in to ILS’
+An override message will be added to the request, and it will be closed and moved to history.
+</td>
+    </tr>
+</table>    
+
     </div>
     
 </div>
