--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -182,8 +182,8 @@ $('document').ready(function(){
 <h3>Borrowing Tab</h3>
 <p>If there is a problem with an item on this list, click the "Override" button (green plus sign in the right-most column) to view options.</p>
 
-<table>
-<th><td>Action</td><td>Do this...</td></th>
+<table id="fill-table" class="table-width-lib">
+<tr><th><td>Action</td><td>Do this...</td></th></tr>
     <tr>
         <td>Receive</td>
         <td>if you have received the book from the lender, but the lender has not marked it as ‘Shipped’.<br>
@@ -217,8 +217,8 @@ An override message will be added to the request, and it will be closed and move
 <h3>Lending Tab</h3>
 <p>If there is a problem with an item on this list, click the ‘Override’ button (green plus sign) to view options.</p>
 
-<table>
-   <th><td>Action</td><td>Do this...</td></th>
+<table id="fill-table" class="table-width-lib">
+<tr><th><td>Action</td><td>Do this...</td></th></tr>
     </tr>
         <tr>
         <td>Returned</td>
@@ -231,7 +231,7 @@ An override message will be added to the request, and it will be marked as ‘Ch
         <td>if you have said Shipped, but need to change the due date (and the borrower has not marked it as ‘Received’ yet)</td>
     </tr>
 </table> 
-  
+
 <h3>We could not lend</h3>
 <p>See the status column for the reason a request was unfilled. </p>
 
