update to table 3

--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -183,7 +183,7 @@ $('document').ready(function(){
 <p>If there is a problem with an item on this list, click the "Override" button (green plus sign in the right-most column) to view options.</p>
 
 <table id="fill-table" class="table-width-lib">
-<tr><th><td>Action</td><td>Do this...</td></th></tr>
+<tr><th>Action</th><th>Do this...</th></tr>
     <tr>
         <td>Receive</td>
         <td>if you have received the book from the lender, but the lender has not marked it as ‘Shipped’.<br>
@@ -218,7 +218,7 @@ An override message will be added to the request, and it will be closed and move
 <p>If there is a problem with an item on this list, click the ‘Override’ button (green plus sign) to view options.</p>
 
 <table id="fill-table" class="table-width-lib">
-<tr><th><td>Action</td><td>Do this...</td></th></tr>
+<tr><th>Action</th><th>Do this...</th></tr>
     </tr>
         <tr>
         <td>Returned</td>
