fixed history and minor  current edit

--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -179,7 +179,7 @@ $('document').ready(function(){
     <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
 
-<h3>Borrowing Tab</h3>
+<h3>'Borrowing' Tab</h3>
 <p>If there is a problem with an item on this list, click the "Override" button (green plus sign in the right-most column) to view options.</p>
 
 <table id="fill-table" class="table-width-lib">
@@ -214,7 +214,7 @@ An override message will be added to the request, and it will be closed and move
 </td>
 </table>
 
-<h3>Lending Tab</h3>
+<h3>'Lending' Tab</h3>
 <p>If there is a problem with an item on this list, click the ‘Override’ button (green plus sign) to view options.</p>
 
 <table id="fill-table" class="table-width-lib">
@@ -232,7 +232,7 @@ An override message will be added to the request, and it will be marked as ‘Ch
     </tr>
 </table> 
 
-<h3>We could not lend</h3>
+<h3>'We could not lend' Tab</h3>
 <p>See the status column for the reason a request was unfilled. </p>
 
 
