changed so fill logo goes to start page

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -172,7 +172,7 @@ $('document').ready(function(){
 <p>&nbsp;</p>
 <div id="header" class="header-library">
     <div id="header-left">
-      <div id="fill-logo"><a href="/cgi-bin/info.cgi?rm=welcome"><img id="theme-logo" src="/img/fill-lib-logo.png" alt="fill"></a></div>
+      <div id="fill-logo"><a href="/"><img id="theme-logo" src="/img/fill-lib-logo.png" alt="fill"></a></div>
       <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
     </div>
 
