welcome page fix

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -10,8 +10,8 @@ $('document').ready(function() {
   set_primary_tab("menu_home");
 });
 </script>
-
-<div id="main-left" class="tone-box" role="main">
+<div id="center" role="main">
+<div id="main-left" class="tone-box" >
 	<h2>Quick Links</h2>
 	<!--
 	<p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
@@ -60,5 +60,5 @@ $('document').ready(function() {
   </p>
   <p>- the fILL development team</p>
 </div>	
-
+</div><!--div id center-->
 <TMPL_INCLUDE NAME="footer.tmpl">
